fix music player slidebar misaligned positioning

--- a/src/components/music-player/styles/music-player.css
+++ b/src/components/music-player/styles/music-player.css
@@ -1,4 +1,3 @@
 .song-player-container {
     grid-template-rows: 50px 20px;
-    gap: 5px;
 }
